# ffu

./: CLAUDE.md  DFU Procedure Document v1.0.txt  README.md  app.py  config.json  main.py  pyproject.toml  requirements.txt  setup_macos.py
.github/workflows/: build-macos.yml
ffu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ui/: index.html
